# crispy-goggles

./: .gitignore  Cargo.toml  TODO.txt  main.go  prompt.txt  rustfmt.toml
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml  build.rs
common/proto/: shapes.proto
common/src/: convert.rs  lib.rs  lobby.rs  model.rs
lobby_server/: Cargo.toml
lobby_server/src/: main.rs
server/: Cargo.toml
server/src/: engine.rs  event.rs  grpc.rs  main.rs  state.rs  state_old.rs  svc.rs  unit_tasks.rs  viewer.rs
server/src/state/: game.rs  mod.rs  perspective.rs  tasks.rs  templates.rs  types.rs
ui/: Cargo.toml  index.html
ui/src/: main.rs
