[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tonic = { version = "0.14.2", default-features = false, features = ["codegen"] } # codegen is the part generated code uses
tonic-prost = "0.14.2"
# tonic = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14"
