[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
prost = "0.14.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }

common = { path = "../common" }
anyhow = "1.0.100"
tonic-prost = "0.14.2"
tonic = { version = "0.14.2", features = ["transport"] }
tonic-web = "0.14.2"
tower-http = { version = "0.6.8", features = ["cors"] }
http = "1.4.0"
# single_value_channel = "1.2.2"
