[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-net = "0.6.0"
leptos = { version = "0.8.15", features = ["csr"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tonic = { version="0.14.2", default-features=false, features=["codegen"] }
tonic-web-wasm-client = "0.8"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Document", "Window"] }
common = { path = "../common" }
tokio = { version = "1.48.0", features = ["sync"] }
futures = "0.3.31"
js-sys = "0.3.83"
console_error_panic_hook = "0.1.7"

[profile.dev]
debug = true

[profile.release]
debug = true
